[package]
name = "mcp4x"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp4x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP4x digital potentiometers."
readme = "README.md"
keywords = ["digipot", "potentiometer", "driver", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp4x-rs"
documentation = "https://docs.rs/mcp4x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
travis-ci = { repository = "eldruin/mcp4x-rs", branch = "master" }
coveralls = { repository = "eldruin/mcp4x-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
