[package]
name = "mcp4x"
version = "0.2.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp4x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP4x digital potentiometers."
readme = "README.md"
keywords = ["digipot", "potentiometer", "driver", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp4x-rs"
documentation = "https://docs.rs/mcp4x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[dependencies]
embedded-hal = { version = "1.0.0"}
embedded-hal-bus = { version = "0.2.0" }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.8"

[profile.release]
lto = true
