[package]
name = "mcp4x"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/mcp4x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MCP4x digital potentiometers."
readme = "README.md"
keywords = ["digipot", "potentiometer", "driver", "spi", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/mcp4x-rs"
documentation = "https://docs.rs/mcp4x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = { version = "1.0.0"}

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version="0.11", default-features=false, features=["eh1"]}
embedded-hal-bus = "0.1"

[profile.release]
lto = true
